--- a/environment.yml
+++ b/environment.yml
@@ -9,7 +9,7 @@ dependencies:
     - pytorch-lightning
     - pandas
     - matplotlib # ==3.6.0
-    - numpy
+    - numpy<2.0
     - scikit-learn
     - sklearn-som
     - seaborn
