--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ dependencies:
   - python>=3.10,<3.11
   - pip:
     - torch==1.12.1
-    - pytorch-lightning
+    - pytorch-lightning<=1.7.7
     - pandas
     - matplotlib # ==3.6.0
     - numpy<2.0
